# rust-api

./: .env.example  .gitignore  Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20251218_143352_user.rs  m20251218_143352_users.rs
src/: main.rs
src/entity/: user.rs
src/http/controllers/: user_controller.rs
src/http/requests/: user_request.rs
src/http/routes/: mod.rs  user_routes.rs
